[project]
name = "13-advanced-retrieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "langchain-experimental>=0.3.4",
    "langchain>=0.3.19",
    "langchain-cohere>=0.4.2",
    "langchain-openai>=0.3.7",
    "qdrant-client>=1.13.2",
    "rank-bm25>=0.2.2",
    "langchain-qdrant>=0.2.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "python-dotenv>=0.21.0",
    "mcp[cli]>=1.9.3",
]

[project.optional-dependencies]
# Development and test utilities
# These are NOT required in production, but are handy for running linting and the test-suite.

dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=1.0.0",
]
